fix(core): handle overflow scrollbar with hidden columns

--- a/apps/docs/src/app/core/component-docs/flexible-column-layout/examples/dynamic-page/flexible-column-layout-dynamic-page-example.component.scss
+++ b/apps/docs/src/app/core/component-docs/flexible-column-layout/examples/dynamic-page/flexible-column-layout-dynamic-page-example.component.scss
@@ -22,7 +22,7 @@
 }
 
 .docs-fcl-example-section {
-    height: 100vh;
+    height: calc(100vh - 77px);
 
     h2 {
         font-size: 30px;
